@@ -27,11 +27,7 @@ import org.matsim.api.core.v01.Scenario;
 import org.matsim.api.core.v01.TransportMode;
 import org.matsim.api.core.v01.network.Link;
 import org.matsim.api.core.v01.network.Network;
-import org.matsim.api.core.v01.population.Activity;
-import org.matsim.api.core.v01.population.Leg;
-import org.matsim.api.core.v01.population.Person;
-import org.matsim.api.core.v01.population.Plan;
-import org.matsim.api.core.v01.population.PlanElement;
+import org.matsim.api.core.v01.population.*;
 import org.matsim.core.config.groups.RoutingConfigGroup;
 import org.matsim.core.network.NetworkUtils;
 import org.matsim.core.network.algorithms.TransportModeNetworkFilter;
@@ -43,10 +39,10 @@ import org.matsim.facilities.ActivityFacilities;
 import org.matsim.pt.routes.DefaultTransitPassengerRoute;
 import org.matsim.pt.routes.ExperimentalTransitRoute;
 
+import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Stream;
 
 /**
  * Performs several checks that persons are ready for a mobility simulation.
@@ -68,6 +64,7 @@ public final class PersonPrepareForSim extends AbstractPersonAlgorithm {
 
 	private static final Logger log = LogManager.getLogger(PersonPrepareForSim.class);
 	private final Scenario scenario;
+	private final Set<String> modesThatCanHaveOneLegOnly;
 
 	/*
 	 * To be used by the controller which creates multiple instances of this class which would
@@ -83,6 +80,8 @@ public final class PersonPrepareForSim extends AbstractPersonAlgorithm {
 		this.xy2links = new XY2Links(carOnlyNetwork, scenario.getActivityFacilities());
 		this.activityFacilities = scenario.getActivityFacilities();
 		this.scenario = scenario ;
+		modesThatCanHaveOneLegOnly = new HashSet<>(scenario.getConfig().routing().getTeleportedModeParams().keySet());
+		modesThatCanHaveOneLegOnly.add(TransportMode.walk);
 	}
 
 	public PersonPrepareForSim(final PlanAlgorithm router, final Scenario scenario) {
@@ -99,6 +98,8 @@ public final class PersonPrepareForSim extends AbstractPersonAlgorithm {
 		this.xy2links = new XY2Links(net, scenario.getActivityFacilities());
 		this.activityFacilities = scenario.getActivityFacilities();
 		this.scenario = scenario ;
+		modesThatCanHaveOneLegOnly = new HashSet<>(scenario.getConfig().routing().getTeleportedModeParams().keySet());
+		modesThatCanHaveOneLegOnly.add(TransportMode.walk);
 	}
 
 	@Override
@@ -132,12 +133,31 @@ public final class PersonPrepareForSim extends AbstractPersonAlgorithm {
 							break planLoop;
 						}
 					}
-					case Leg leg -> {
-						needsReRoute |= needsReRoute(person, leg);
-					}
+					case Leg leg -> needsReRoute |= needsReRoute(person, leg);
 					default -> throw new IllegalStateException("Unexpected PlanElement: " + pe);
 				}
 			}
+
+			// There is router without access/egress routing any more. Trips with one leg only are outdated.
+			if (this.scenario.getConfig().routing().getAccessEgressConsistencyCheck() != RoutingConfigGroup.AccessEgressConsistencyCheck.disable) {
+
+				for (Trip trip : TripStructureUtils.getTrips(plan)) {
+					if (trip.getLegsOnly().size() > 1) continue;
+
+					Leg leg = trip.getLegsOnly().getFirst();
+					if (this.modesThatCanHaveOneLegOnly.contains(leg.getMode()) && !this.scenario.getConfig().qsim().getMainModes().contains(leg.getMode())) {
+						// we are ok here, since this mode is allowed to be single-leg (teleported or explicitly walked).
+						continue;
+					}
+
+					if (this.scenario.getConfig().routing().getAccessEgressConsistencyCheck() == RoutingConfigGroup.AccessEgressConsistencyCheck.abortOnInconsistency) {
+						throw new RuntimeException("Person" + person.getId() + " has a trip with no access/egress leg. Aborting! If this is intended, set the routing config parameter 'accessEgressConsistencyCheck' to 'disable' or 'reroute'.");
+					} else {
+						needsReRoute = true;
+					}
+				}
+			}
+
 			if (needsXY2Links) {
 				this.xy2links.run(plan);
 			}
@@ -234,7 +254,7 @@ public final class PersonPrepareForSim extends AbstractPersonAlgorithm {
 		for (Trip trip : TripStructureUtils.getTrips(plan.getPlanElements())) {
 			List<Leg> legs = trip.getLegsOnly();
 			if (!legs.isEmpty()) {
-				String routingMode = TripStructureUtils.getRoutingMode(legs.get(0));
+				String routingMode = TripStructureUtils.getRoutingMode(legs.getFirst());
 
 				for (Leg leg : legs) {
 					// check all legs either have the same routing mode or all have routingMode==null
@@ -262,7 +282,7 @@ public final class PersonPrepareForSim extends AbstractPersonAlgorithm {
 				if (routingMode == null) {
 					if (legs.size() == 1) {
 						// there is only a single leg (e.g. after Trips2Legs and a mode choice replanning module)
-						routingMode = legs.get(0).getMode();
+						routingMode = legs.getFirst().getMode();
 						if (routingMode.equals(TransportMode.transit_walk)) {
 							String errorMessage = "Found a trip of only one leg of mode transit_walk. "
 									+ "This should not happen during simulation since transit_walk was replaced by walk and "
@@ -270,7 +290,7 @@ public final class PersonPrepareForSim extends AbstractPersonAlgorithm {
 							log.error(errorMessage);
 							throw new RuntimeException(errorMessage);
 						}
-						TripStructureUtils.setRoutingMode(legs.get(0), routingMode);
+						TripStructureUtils.setRoutingMode(legs.getFirst(), routingMode);
 					} else {
 						String errorMessage = "Found a trip whose legs have no routingMode. "
 								+ "This is only allowed for (outdated) input plans, not during simulation (after PrepareForSim). Agent id: "
